tests/fixtures/invalid/bytes_floordiv_int.py
# Cannot floor divide Bytes and Int
x: bytes = b"hello" // 1
